--- a/jesus/css/style.css
+++ b/jesus/css/style.css
@@ -17,6 +17,7 @@
     --font-logo: 'Tangerine';
 }
 header {
+    float: left;
     background-color: var(--cor-de-fundo);
     height: 100px;
     width: auto;
