--- a/desafios/d012/estilo/syle.css
+++ b/desafios/d012/estilo/syle.css
@@ -1,14 +1,21 @@
 @charset "UTF-8";
+@import url('https://fonts.googlepis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googlepis.com/css2?family=Sriracha&display=swap');
 * {
     margin: 0;
     padding: 0;
+    font-size: 1em;
 }
 :root {
     --dark-gray: #A9A9A9;
     --black: #000000;
     --white: #ffffff;
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
 }
 html, body {
+    font-family: var(--font1);
     min-height: 100vh;
     background-color: var(--dark-gray);
 }
@@ -18,8 +25,10 @@ header {
     text-align: center;
 }
 header > h1 {
-    padding-top: 50px;
+    font-family: var(--font2);
     font-variant: small-caps;
+    font-size: 4vw;
+    padding: 50px 0 0 0;
 }
 header > p {
     padding: 0 0 50px 0;
@@ -33,8 +42,10 @@ header a:hover footer a:hover {
     text-decoration: underline;
 }
 section {
-    padding: 10vh 0 10vh 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
     line-height: 2em;
+    padding: 10vh 0 10vh 30px;
 }
 section.normal {
     background-color: var(--white);
@@ -46,7 +57,8 @@ section.imagem {
 }
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.253);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 footer {
     background-color: var(--black);
