--- a/desafios/d012/estilo/syle.css
+++ b/desafios/d012/estilo/syle.css
@@ -47,6 +47,9 @@ section {
     line-height: 2em;
     padding: 10vh 0 10vh 30px;
 }
+section > p {
+    padding: 0 0 2em 0;
+}
 section.normal {
     background-color: var(--white);
     color: var(--black);
@@ -54,11 +57,22 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: var(--white);
+    box-shadow: inset 6px 6px 13px 0 rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0 var(--black);
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
 }
 footer {
     background-color: var(--black);
