--- a/Exercícios/ex023/css/style.css
+++ b/Exercícios/ex023/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 :root {
+    --branco: #ffffff;
     --preto: #000000;
     --gray: #808080;
     --amarelo: #ffff00;
@@ -21,4 +22,32 @@ td {
     padding: 8px;
     text-align: center;
     vertical-align: top;
+}/* fim do exercício um */
+h1 {
+    text-align: center;
+    margin: 10px;
+    padding: 5px;
+}
+.tabela002 {
+    margin: auto;
+    width: 1200px;
+    font-size: .8em;
+}
+td.img {
+    text-align: left;
+}
+td, th {
+    border: 1px solid var(--preto);
+    padding: 10px;
+}
+td {
+    text-align: right;
+}
+thead {
+    background-color: var(--gray);
+    color: var(--branco);
+}
+tfoot {
+    background-color: var(--gray);
+    color: var(--branco);
 }
