--- a/jesus/css/style.css
+++ b/jesus/css/style.css
@@ -27,109 +27,86 @@ a {
     font-weight: bold;
 }
 #header {
+    background: var(--cor-de-fundo);
+    box-sizing: border-box;
+    height: 100px;
+    padding: 1rem;
     display: flex;
+    align-items: center;
+    justify-content: space-between;/* coloca uma espaçameto entre os elementos. */
 }
 #menu {
     display: flex;
     list-style: none;
     gap: .5rem;
 }
-/*https://www.youtube.com/watch?v=DnODupiIAiE
-header > h1 {
-    font-family: var(--font-logo);
-    position: absolute;
-    margin: 29px 0 0 15px;
-    float: left;
-}
-header menu ul {
-    float: left;
-    margin: 38px 0 0 250px;
-}
-header menu ul li {
-    display: inline;
-}
-header menu ul li a {
-    text-decoration: none;
-    background-color: var(--cor-do-menu);
-    color: var(--cor-fonte-preta);
+#menu a {
+    background: var(--cor-do-menu);
+    color: var(--cor-fonte-branco);
+    display: block;
+    padding: 0.5rem;
     border-radius: 5px;
-    padding: 10px;
 }
-header menu ul li a:hover {
-    background-color: var(--cor-fonte-branco);
-    color: var(--cor-de-fundo);
+#menu a:hover {
+    color: var(--cor-do-menu);
+    border: solid 1px var(--cor-do-menu);
+    background: var(--cor-fonte-branco);
 }
-header div.social-icons i.bxl-instagram {
-    float: left;
-    color: var(--cor-fonte-branco);
-    font-size: 2em;
-    margin: 30px 0 0 0;
-    padding: 0 0 0 10px;
+#btn-mobile {
+    display: none;
 }
-header .social-icons .instagram {
-    float: left;
-    color: var(--cor-fonte-branco);
-    text-decoration: none;
-    padding: 8px;
-    margin: 30px 0 0 0;
-}
-header .social-icons i.bxl-whatsapp {
-    float: left;
-    color: var(--cor-fonte-branco);
-    font-size: 2em;
-    margin: 30px 0 0 0;
-    padding: 0 0 0 10px;
-}
-header .social-icons .whatsapp {
-    float: left;
-    color: var(--cor-fonte-branco);
-    text-decoration: none;
-    padding: 8px;
-    margin: 30px 0 0 0;
-}
-@media only screen and (max-width: 950px) {
-    header menu ul li a {
-        font-size: .6em;
-    }
-    header div.social-icons i.bxl-instagram {
-        font-size: 1.5em;
-        margin: 38px 0 0 0;
-    }
-    header .social-icons .instagram {
-        margin: 32px 0 0 0;
-    }
-    header .social-icons i.bxl-whatsapp {
-        font-size: 1.5em;
-        margin: 38px 0 0 0;
-    }
-    header .social-icons .whatsapp {
-        margin: 32px 0 0 0;
-    }
-}
-@media only screen and (max-width: 830px) {
-    header {
-        height: 80px;
-    }
-    header h1 {
-        font-size: 1.4em;
-    }
-    header menu ul {
-        margin: 32px 0 0 180px;
-    }
-    header div.social-icons i.bxl-instagram {
-        font-size: 1.2em;
-        margin: 32px 0 0 0;
-    }
-    header .social-icons .instagram {
+@media (max-width: 980px) {
+    #btn-mobile {
+        display: flex;
+        padding: 0.5rem;
         font-size: 1em;
-        margin: 26px 0 0 0;
+        border: 1px solid var(--cor-fonte-branco);
+        border-radius: 5px;
+        background: none;
+        cursor: pointer;
+        gap: .5rem;
     }
-    header .social-icons i.bxl-whatsapp {
-        font-size: 1.2em;
-        margin: 32px 0 0 0;
+    #hamburger {
+        display: block;
+        color: var(--cor-fonte-branco);
+        border-top: 2px solid;
+        width: 20px;
     }
-    header .social-icons .whatsapp {
-        font-size: 1em;
-        margin: 26px 0 0 0;
+    #hamburger::after, #hamburger::before {
+        content: '';
+        display: block;
+        background: currentColor;
+        width: 20px;
+        height: 2px;
+        margin: 5px 0 0 0;
+    }
+    #nav.active #hamburger {
+        background: blue;
+    }
+    #menu {
+        display: block;
+        position: absolute;
+        background: var(--cor-de-fundo);
+        display: block;
+        transition: .6s;
+        visibility: hidden;
+        overflow-y: hidden;
+        height: 0;
+        width: 100%;
+        top: 100px;
+        right: 0;
+        z-index: 1000;
+    }
+    #menu a {
+        color: var(--cor-fonte-preta);
+        background: var(--cor-de-fundo);
+        border-bottom: 2px solid var(--cor-do-menu);
+        padding: 1rem 0;
+        margin: 0 1rem;
+    }
+    #nav.active #menu {
+        visibility: visible;
+        overflow-y: auto;
+        height: calc(100vh - 100px);
     }
 }
