--- a/jesus/css/style.css
+++ b/jesus/css/style.css
@@ -119,3 +119,33 @@ a {
         height: calc(100vh - 100px);
     }
 }
+/* Início do destaques */
+main .slide-container {
+    min-height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--cor-de-fundo);
+}
+.slide-cotent {
+    margin: 0 40px;
+}
+.card {
+    border-radius: 25px;
+    background-color: var(--cor-fonte-branco);
+}
+.card-image {
+    position: relative;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background: var(--cor-fonte-branco);
+    padding: 3px;
+}
+.card-image .card-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid var(--cor-do-menu);
+}
