--- a/jesus/css/style.css
+++ b/jesus/css/style.css
@@ -128,6 +128,10 @@ a {
     align-items: center;
     min-height: 50vh;
     background-color: var(--cor-de-fundo);
+    padding: 10px;
+}
+.destaque section {
+    padding: 5px;
 }
 .produtos .imagem {
     width: 140px;
